# bevy-multiplayer

./: .dockerignore  .gitignore  Cargo.toml  README.md  Taskfile.yml  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: gameservers.rs  gamesessions.rs  http_tracing.rs  main.rs  notifs.rs  options.rs  redis.rs  state.rs
api/src/handlers/: gameclient.rs  gameserver.rs  mod.rs
api/src/models/: gameserver.rs  gamesession.rs
api/src/routes/: gameserver.rs  mod.rs
bevy_mod_websocket/: Cargo.toml
bevy_mod_websocket/src/: lib.rs
client/: Cargo.toml
client/.cargo/: config.toml
client/src/: api.rs  camera.rs  client.rs  connect_server.rs  debug.rs  game.rs  game_menu.rs  input.rs  main.rs  main_menu.rs  options.rs  settings.rs  ui.rs
common/: Cargo.toml
common/src/: gameclient.rs  gameserver.rs  lib.rs  user.rs
game/: Cargo.toml
game/client/: Cargo.toml
game/client/src/: api.rs  camera.rs  client.rs  connect_server.rs  debug.rs  game.rs  game_menu.rs  input.rs  main.rs  main_menu.rs  notifs.rs  settings.rs  ui.rs
game/game/: Cargo.toml
game/game/src/: dynamic.rs  game.rs  lib.rs  network.rs  player.rs  server.rs  spawn.rs  utils.rs  world.rs
game/server/: Cargo.toml  Dockerfile
game/server/src/: api.rs  game.rs  main.rs  notifs.rs  options.rs  placement.rs  server.rs
game/server/src/notifs/: mod.rs  placement.rs  reservation.rs
game/server/src/orchestration/: gamelift.rs  mod.rs
game/src/: ball.rs  camera.rs  client.rs  debug.rs  dynamic.rs  game.rs  input.rs  lib.rs  main.rs  main_menu.rs  network.rs  player.rs  server.rs  spawn.rs  ui.rs  world.rs
infra/services/: Chart.yaml  values.yaml
infra/services/terraform/flexmatch/: main.tf  variables.tf
infra/services/terraform/gamelift/: main.tf  variables.tf
internal/: Cargo.toml
internal/src/: gameserver.rs  gamesettings.rs  lib.rs  notifs.rs
notifs/: Cargo.toml  Dockerfile
notifs/src/: listener.rs  main.rs  notifs.rs  options.rs  state.rs
notifs/src/handlers/: gameclient.rs  mod.rs
notifs/src/routes/: gameserver.rs  mod.rs
server/: Cargo.toml  Dockerfile
server/src/: api.rs  game.rs  main.rs  notifs.rs  options.rs  placement.rs  server.rs  tasks.rs  websocket.rs
server/src/orchestration/: agones.rs  gamelift.rs  mod.rs
services/: docker-compose.yml
services/api/: Cargo.toml  Dockerfile
services/api/src/: gameservers.rs  gamesessions.rs  main.rs  notifs.rs  options.rs  state.rs
services/api/src/handlers/: gameclient.rs  gameserver.rs
services/api/src/models/: gameserver.rs  gamesession.rs  mod.rs
services/api/src/routes/: gameclient.rs
services/notifs/: Cargo.toml  Dockerfile
services/notifs/src/: listener.rs  main.rs  notifs.rs  options.rs
services/notifs/src/handlers/: gameserver.rs
services/notifs/src/routes/: gameclient.rs
shared/common/: Cargo.toml
shared/common/src/: gameclient.rs  gameserver.rs  lib.rs
shared/internal/: Cargo.toml
shared/internal/src/: lib.rs  notifs.rs  redis.rs
shared/internal/src/axum/: http_tracing.rs  mod.rs
