[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
bb8-redis = "0.17"
clap = { version = "4.5", features = ["derive"] }
http = "1.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tonic = "0.12"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }

common = { path = "../common" }
