[package]
name = "bevy_mod_websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false }
bevy-tokio-tasks = "0.15"
futures-lite = "2.5"
futures-util = "0.3"
http = "1.1"
thiserror = "1.0"
tokio = { version = "1.41", default-features = false }
tokio-tungstenite = "0.24"
