[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = "0.30"
bevy-inspector-egui = "0.27"
bevy_mod_picking = "0.20"
bevy_mod_reqwest = "0.16"
bevy_rapier3d = "0.27"
bevy_replicon = { version = "0.28", default-features = false, features = [
    "scene",
    "parent_sync",
    "client",
] }
bevy_replicon_renet = { version = "0.5", default-features = false, features = [
    "renet_serde",
    "renet_transport",
    "client",
] }

common = { path = "../common" }
game = { path = "../game", features = ["client"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
