[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = "0.30"
bevy-inspector-egui = "0.27"
bevy_mod_picking = "0.20"
bevy_mod_reqwest = "0.16"
bevy_rapier3d = { version = "0.27", features = ["simd-stable"] }
bevy_replicon = { version = "0.28", default-features = false, features = [
    "scene",
    "parent_sync",
    "client",
] }
bevy_replicon_renet = { version = "0.5", default-features = false, features = [
    "renet_serde",
    "renet_transport",
    "client",
] }
clap = { version = "4.5", features = ["derive"] }

common = { path = "../common" }
game = { path = "../game" }
