[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_rapier3d = { version = "0.27", default-features = false, features = [
    "dim3",
    "async-collider",
    "simd-stable",
] }
bevy_replicon = { version = "0.28", default-features = false, features = [
    "scene",
    "parent_sync",
] }
serde = { version = "1.0", features = ["derive"] }

common = { path = "../common" }
