[package]
name = "notifs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy-multiplayer-notifs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
http = "1.1"
tokio = { version = "1.41", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

common = { path = "../common" }
internal = { path = "../internal" }
