[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
agones = "1.44"
bevy = "0.14"
bevy_mod_reqwest = "0.16"
bevy_replicon = { version = "0.28", default-features = false, features = [
    "scene",
    "parent_sync",
    "server",
] }
bevy_replicon_renet = { version = "0.5", default-features = false, features = [
    "renet_serde",
    "renet_transport",
    "server",
] }
tokio = { version = "1.40", features = ["full"], optional = true }

common = { path = "../common" }
game = { path = "../game" }
