[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy-multiplayer-server"
path = "src/main.rs"

[dependencies]
agones_api = { package = "agones", version = "1.44", optional = true }
anyhow = "1.0"
aws-gamelift-server-sdk-rs = { version = "0.3", optional = true }
bevy = "0.14"
bevy_mod_reqwest = "0.16"
bevy_replicon = { version = "0.28", default-features = false, features = [
    "scene",
    "parent_sync",
    "server",
] }
bevy_replicon_renet = { version = "0.5", default-features = false, features = [
    "renet_serde",
    "renet_transport",
    "server",
] }
bevy-tokio-tasks = "0.14"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "sync"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

common = { path = "../common" }
game = { path = "../game" }

[features]
default = ["agones", "gamelift"]
agones = ["dep:agones_api"]
gamelift = ["dep:aws-gamelift-server-sdk-rs"]
