[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy-multiplayer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bevy = "0.15"
bevy_egui = "0.31"
bevy-inspector-egui = "0.28"
#bevy_mod_reqwest = "0.18"
bevy_mod_reqwest = { git = "https://github.com/luminoth/bevy_mod_reqwest" }
bevy_mod_websocket = { path = "../../bevy_mod_websocket" }
bevy_rapier3d = { version = "0.28", features = ["simd-stable"] }
bevy_replicon = { version = "0.29", default-features = false, features = [
    "scene",
    "parent_sync",
    "client",
] }
bevy_replicon_renet = { version = "0.6", default-features = false, features = [
    "renet_netcode",
    "renet_steam",
    "client",
] }
#bevy_replicon_snap = "0.2"
bevy-tokio-tasks = "0.15"
clap = { version = "4.5", features = ["derive"] }
http = "1.1"
serde_json = "1.0"
tokio-tungstenite = "0.24"
uuid = { version = "1.11", features = ["v4", "serde"] }

common = { path = "../../shared/common" }
game_common = { package = "game", path = "../game" }
