[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_rapier3d = { version = "0.28", default-features = false, features = [
    "dim3",
    "async-collider",
    "simd-stable",
] }
bevy_replicon = "0.29"
bevy_replicon_renet = "0.6"
serde = { version = "1.0", features = ["derive"] }

common = { path = "../../shared/common" }
