[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = { version = "0.2", features = ["simd"] }
bevy = "0.15"
bevy_replicon = "0.29"
bevy_replicon_renet = "0.6"
bevy-tnua = "0.21"
bevy-tnua-avian3d = "0.2"
network-interface = "2.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

common = { path = "../../shared/common" }

[lints]
workspace = true
