[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy-multiplayer-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1.5"
aws-sdk-gamelift = "1.50"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
bb8-redis = "0.17"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
headers = "0.4"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

common = { path = "../../shared/common" }
internal = { path = "../../shared/internal" }
