[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
#bevy_mod_reqwest = "0.18"
bevy_mod_reqwest = { git = "https://github.com/luminoth/bevy_mod_reqwest" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }

[lints]
workspace = true
