[package]
name = "internal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
bb8-redis = "0.17"
http = "1.1"
http-body-util = "0.1"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }

common = { path = "../common" }
